[package]
name = "shi_jie_ol_helper_v3"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
template-matching = { version = "0.2.0", features = ["image"] }
rdev = "0.5.3"
win_ocr = "0.1.3"
image = "0.24.0"
serde = {version="1.0.228",features=["derive"]}
serde_json = "1.0.149"
droidrun-adb = "0.1.2"
tokio = {version="1.52.1", features=["rt", "rt-multi-thread","macros"]}